Fixed login button spacing

--- a/main.css
+++ b/main.css
@@ -131,7 +131,7 @@ body {
 		padding-left: 20px;
 		padding-right: 20px;
 		border-radius: 32px;
-		margin-left: 567px;
+		margin-left: 600px;
 		margin-right: 30px;
 		font-weight: bold;
 		display: block;
